Set up viewPager and tabLayout

--- a/app/src/main/res/layout/fragment_spirit_photos.xml
+++ b/app/src/main/res/layout/fragment_spirit_photos.xml
@@ -6,44 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".view.SpiritPhotosFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/filterLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-        android:layout_width="150dp"
+    <com.google.android.material.chip.ChipGroup
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
-            android:layout_width="150dp"
+        <com.google.android.material.chip.Chip
+            android:id="@+id/fhaz"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/filter"
-            android:inputType="none"
-            app:layout_constraintEnd_toEndOf="@+id/filterLayout"
-            app:layout_constraintTop_toTopOf="@+id/filterLayout" />
+            android:text="@string/FHAZ" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/rhaz"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/RHAZ" />
 
+        <com.google.android.material.chip.Chip
+            android:id="@+id/navcam"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/NAVCAM" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/pancam"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/PANCAM" />
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/minites"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/MINITES" />
+
+    </com.google.android.material.chip.ChipGroup>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-        app:spanCount="@integer/grid_columns"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterLayout"
-        tools:listitem="@layout/curiosity_view_holder"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:spanCount="@integer/grid_columns"
+        tools:listitem="@layout/curiosity_view_holder" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
