Made some edits

--- a/app/src/main/res/layout/fragment_curiosity_photos.xml
+++ b/app/src/main/res/layout/fragment_curiosity_photos.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
+        app:singleSelection="true"
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
