--- a/app/src/main/res/layout/fragment_curiosity_photos.xml
+++ b/app/src/main/res/layout/fragment_curiosity_photos.xml
@@ -1,95 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.CuriosityPhotosFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/fhaz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/FHAZ"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <variable
+            name="viewModel"
+            type="com.atakanmadanoglu.nasa_rover_vehicles.viewModel.CuriosityPhotosViewModel" />
+    </data>
 
-    <Button
-        android:id="@+id/rhaz"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/RHAZ"
-        android:layout_marginLeft="5dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/fhaz"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/mast"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/MAST"
-        android:layout_marginLeft="5dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/rhaz"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/chemcam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/CHEMCAM"
-        android:layout_marginLeft="5dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/mast"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/mahli"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/MAHLI"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/navcam"
-        app:layout_constraintTop_toBottomOf="@+id/mast" />
-
-    <Button
-        android:id="@+id/mardi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/MARDI"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fhaz" />
-
-    <Button
-        android:id="@+id/navcam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/NAVCAM"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/mardi"
-        app:layout_constraintTop_toBottomOf="@+id/rhaz" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:listitem="@layout/curiosity_view_holder" />
+        tools:context=".view.CuriosityPhotosFragment">
+
+        <Button
+            android:id="@+id/fhaz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/FHAZ"
+            android:onClick="@{ () -> viewModel.getFHAZPhotos()}"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/rhaz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/RHAZ"
+            android:onClick="@{ () -> viewModel.getRHAZPhotos()}"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/fhaz"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/mast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/MAST"
+            android:onClick="@{ () -> viewModel.getMASTPhotos()}"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/rhaz"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/chemcam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/CHEMCAM"
+            android:onClick="@{ () -> viewModel.getCHEMCAMPhotos()}"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/mast"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/mahli"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/MAHLI"
+            android:onClick="@{ () -> viewModel.getMAHLIPhotos()}"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/navcam"
+            app:layout_constraintTop_toBottomOf="@+id/mast" />
+
+        <Button
+            android:id="@+id/mardi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="@string/MARDI"
+            android:onClick="@{ () -> viewModel.getMARDIPhotos()}"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fhaz" />
+
+        <Button
+            android:id="@+id/navcam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="4dp"
+            android:text="@string/NAVCAM"
+            android:onClick="@{ () -> viewModel.getNAVCAMPhotos()}"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/mardi"
+            app:layout_constraintTop_toBottomOf="@+id/rhaz" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="120dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/curiosity_view_holder" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
